# mine

./: .clang-tidy  .gitignore  meson.build
.cache/clangd/index/: ast.h.C9489B8C767C8A72.idx  binary_expr.hpp.A9C1EC9C8D8BE8E1.idx  compiler.cpp.41DDA0430A27EACA.idx  compiler.hpp.0D3C4945A18BFBA4.idx  error.cpp.5C12C296C9EE2943.idx  error.hpp.28A2EF0137AD18E4.idx  errors.h.62A5798CB2845C67.idx  expr.hpp.EA92CDA49BED79EF.idx  expr_stmt.hpp.1AB1D6EE0BE40CD4.idx  keywords.h.93F584C01ACBCF4A.idx  lexer.cpp.5B7AD9959A5C2346.idx  lexer.hpp.FE93D83B89D29AF6.idx  literal_expr.hpp.F88C7FCDA6CDA579.idx  main.cpp.65B83A81C3AAB497.idx  node.hpp.B3322F64D15BA991.idx  nodes.h.112650AD0257EE23.idx  parser.cpp.A7E7C6F2CC25E8B2.idx  parser.hpp.7F2DB3CFECF0EED2.idx  semtypes.h.BE65306D074226A2.idx  stmt.hpp.DF94EA9D5AC8993C.idx  token.hpp.638892D9A22C82EC.idx  tokens.h.3D5358D9DF0A2266.idx  type.hpp.0A687C606C1287C6.idx  types.h.E303A7740B12037E.idx  unary_expr.hpp.3909D5EA39D73B40.idx  value.hpp.928D2C64093839C6.idx  visitor.hpp.196A2017A31E26DE.idx
examples/: basic.mine  coolthings.mine  functions.mine  lextest.mine  loop.mine  mine_advanced.mine  operators.mine  test
includes/compiler/: compiler.hpp
includes/error/: error.hpp  errors.h
includes/lexer/: keywords.h  lexer.hpp  semtypes.h  token.hpp  tokens.h
includes/parser/: parser.hpp
includes/value/: type.hpp  types.h  value.hpp
src/: main.cpp  meson.build
src/compiler/: compiler.cpp  meson.build
src/error/: error.cpp  meson.build
src/lexer/: lexer.c  lexer.cpp  meson.build
src/parser/: meson.build  parser.cpp
(+10 files in other folders)
